--- a/main.html
+++ b/main.html
@@ -12,9 +12,13 @@
 <body>
 	<header>
 		<div id="logo" onclick="slowScroll('#top')">
-			<img src="picture/Logo1.png" alt="Logo">
+			<img src="picture/Logo2.png" alt="Logo">
+			<span>Группа компании дар</span>
 		</div>
 		<div id="about">
+			<div class="dropdown">
+				<span><a href="#" onclick="slowScroll('About us')" title="О нас">О нас </a></span>
+			</div>
 			<div class="dropdown">
 				<span class="dropspan">Лён</span>
 				<div class="dropdown-content">
@@ -46,7 +50,6 @@
 
 	<div id="top">
 		<h1>Лён и Конопля</h1>
-		<h3>Экономическая эффективность инновационной технологии переработки тресты масличного льна</h3>
 	</div>
 
 	<!--Блок про Лён -->
@@ -298,8 +301,9 @@
 		}
 
 		$(document).on("scroll", function () {
-			if ($(window).scrollTop() === 0)
+			if ($(window).scrollTop() === 0) {
 				$("header").removeClass("fixed");
+			}
 			else
 				$("header").attr("class", "fixed");
 		});
