--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		</div>
 		<div id="about">
 			<div class="dropdown">
-				<span><a href="#" onclick="slowScroll('About us')" title="О нас">О нас </a></span>
+				<span><a href="#" onclick="slowScroll('#About_us')" title="О нас">О нас </a></span>
 			</div>
 			<div class="dropdown">
 				<span class="dropspan">Лён</span>
@@ -50,6 +50,25 @@
 
 	<div id="top">
 		<h1>Лён и Конопля</h1>
+	</div>
+
+	<!-- Блок "О Нас"	-->
+
+	<div id="About_us">
+		<div class="block-title">
+			<span>О нас</span>
+		</div>
+		<div class="block-parent">
+			<div class="block1">
+				<img src="picture/picture_2.jpg" alt="Logo" class="image">
+			</div>
+			<div class="block2">
+				<span>Ввиду сложности обсуждаемых нами вопросов считаю целесообразным построить свое выступление в
+					проблемном ключе, ставя и формулируя проблемы, имеющие прямое отношение к устранению социально-культурной
+					и экономической базы наркомании – то есть снятию с дальневосточной молодежи депрессивного угнетения и
+					перехода к позитивному социальному самочувствию.</span>
+			</div>
+		</div>
 	</div>
 
 	<!--Блок про Лён -->
