--- a/main.html
+++ b/main.html
@@ -10,19 +10,32 @@
 </head>
 
 <body>
+
+	<!-- Меню -->
+
 	<header>
+
+		<div id="mySidenav" class="sidenav">
+			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+			<a href="#">About</a>
+			<a href="#">Services</a>
+			<a href="#">Clients</a>
+			<a href="#">Contact</a>
+		</div>
+
 		<div id="logo" onclick="slowScroll('#top')">
 			<img src="picture/Logo2.png" alt="Logo">
 			<span>Группа компании дар</span>
 		</div>
 		<div id="about">
 			<div class="dropdown">
-				<span><a href="#" onclick="slowScroll('#About_us')" title="О нас">О нас </a></span>
+				<span onclick="openNav()">О нас </a></span>
 			</div>
 			<div class="dropdown">
 				<span class="dropspan">Лён</span>
 				<div class="dropdown-content">
-					<a href="#" onclick="slowScroll('#Linen')" title="Переработка тресты масличного льна">Переработка тресты
+					<a href="#" onclick="slowScroll('#Linen')" title="Переработка тресты масличного льна">Переработка
+						тресты
 						масличного льна.</a>
 					<a href="#" onclick="slowScroll('#IndustryCreation')" title="Создание Индустрии">Как создать новую
 						индустрию льна?</a>
@@ -46,7 +59,7 @@
 		</div>
 	</header>
 
-	<!-- Меню -->
+	<!-- 1 Страница -->
 
 	<div id="top">
 		<h1>Лён и Конопля</h1>
@@ -64,8 +77,10 @@
 			</div>
 			<div class="block2">
 				<span>Ввиду сложности обсуждаемых нами вопросов считаю целесообразным построить свое выступление в
-					проблемном ключе, ставя и формулируя проблемы, имеющие прямое отношение к устранению социально-культурной
-					и экономической базы наркомании – то есть снятию с дальневосточной молодежи депрессивного угнетения и
+					проблемном ключе, ставя и формулируя проблемы, имеющие прямое отношение к устранению
+					социально-культурной
+					и экономической базы наркомании – то есть снятию с дальневосточной молодежи депрессивного угнетения
+					и
 					перехода к позитивному социальному самочувствию.</span>
 			</div>
 		</div>
@@ -83,27 +98,33 @@
 		<div class="text">
 			<span>
 				<p>
-					Масличный лен для производства семян в технических и пищевых целях является высокодоходной культурой. В
+					Масличный лен для производства семян в технических и пищевых целях является высокодоходной
+					культурой. В
 					России он возделывается в 49 регионах, в основном Южном,
-					Сибирском, Северо-Кавказском, Приволжском федеральных округах. Семена масличного льна, имея стабильный
+					Сибирском, Северо-Кавказском, Приволжском федеральных округах. Семена масличного льна, имея
+					стабильный
 					спрос и высокую стоимость, экспортируются во многие страны мира.
 					За последние 10 лет площади масличного льна увеличились с 85 тыс. гектаров в 2008 году до 566 тыс.
 					гектаров в 2017 году. В то же время волокнистая часть стеблей масличного
-					льна, которая содержит от 20 до 25% волокна, а это около 100 тыс. тонн , практически не используется. При
+					льна, которая содержит от 20 до 25% волокна, а это около 100 тыс. тонн , практически не
+					используется. При
 					средней рыночной стоимости тонны льноволокна 25 тыс. рублей регионы
-					масличного льносеяния ежегодно теряют более 2 млрд. рублей доходов. При этом волокно масличного льна, как
+					масличного льносеяния ежегодно теряют более 2 млрд. рублей доходов. При этом волокно масличного
+					льна, как
 					новый вид сырья можно использовать при планировании производства
 					различных изделий для многих отраслей экономики РФ.
 				</p>
 				<p>
 					Анализ производства льна масличного за 10 лет в России свидетельствует о значительных объемах
 					неиспользуемой волокнистой части тресты,
-					пригодной для производства ликвидного льноволокна и изделий из него для большинства отраслей экономики.
+					пригодной для производства ликвидного льноволокна и изделий из него для большинства отраслей
+					экономики.
 					На <a href="#graph1">рисунке 1</a> представлена динамика посевных площадей льна масличного
 					в РФ и объемы неиспользованной лубоволокнистой тресты и соломы.
 				</p>
 				<p>
-					Исходя из наличия ежегодно возобновляемой сырьевой базы лубоволокнистого материала во Всероссийском НИИ
+					Исходя из наличия ежегодно возобновляемой сырьевой базы лубоволокнистого материала во Всероссийском
+					НИИ
 					механизации льноводства (ВНИИМЛ) разработана малозатратная технология
 					и блочно-модульное оборудование для переработки стеблей льна масличного в волокно многоцелевого
 					назначения. Аналог этой технологической линии прошел производственные испытания
@@ -114,11 +135,13 @@
 						href="#graph2">рисунке 2</a>.
 				</p>
 				<p>
-					Технологический процесс переработки тресты льна на существующей базовой линии АКЛВ-1-01 производства
+					Технологический процесс переработки тресты льна на существующей базовой линии АКЛВ-1-01
+					производства
 					завода им. Королева (г. Иваново) заключается в следующем: рулоны
 					тресты льна разматываются рулоноразмотчиком и подаются в сушильную машину, затем высушенная треста
 					направляется на куделеприготовительный агрегат, который состоит из
-					ряда отдельных машин: колковый питатель, мяльные, трепальные и трясильные машины. Агрегат оборудован
+					ряда отдельных машин: колковый питатель, мяльные, трепальные и трясильные машины. Агрегат
+					оборудован
 					сложной системой пневмотранспорта и большим количеством вентиляторов.
 					Линия требует значительных затрат на обслуживание и большого количества ручного труда.
 				</p>
@@ -130,7 +153,8 @@
 				<img src="picture/graph_1.jpg" alt="Динамика посевных площадей масличного льна и расчетного объема выращенной, но неиспользуемой (утилизированной)
 			льнотресты в РФ" id="graph1">
 				<span>
-					Рисунок 1. Динамика посевных площадей масличного льна и расчетного объема выращенной, но неиспользуемой
+					Рисунок 1. Динамика посевных площадей масличного льна и расчетного объема выращенной, но
+					неиспользуемой
 					(утилизированной) льнотресты в РФ
 				</span>
 			</div>
@@ -139,7 +163,8 @@
 					alt="Схемы технологической линии по переработке тресты масличного льна для базовой (а) и новой (б) технологий "
 					id="graph2">
 				<span>
-					Рисунок 2. Схемы технологической линии по переработке тресты масличного льна для базовой (а) и новой (б)
+					Рисунок 2. Схемы технологической линии по переработке тресты масличного льна для базовой (а) и
+					новой (б)
 					технологий
 				</span>
 			</div>
@@ -206,7 +231,8 @@
 					же льняные ткани перестанут восприниматься как только «для богатых».
 				</p>
 				<p>
-					<b>Пятое.</b> Фундаментом новой индустрии должна быть практикоориентированная фундаментальная наука и РАН
+					<b>Пятое.</b> Фундаментом новой индустрии должна быть практикоориентированная фундаментальная наука
+					и РАН
 					вместе с несколькими
 					базовыми НИИ и инжиниринговой фирмой. Без научно-исследовательских
 					разработок как постоянного сопровождения производственных процессов
@@ -326,6 +352,15 @@
 			else
 				$("header").attr("class", "fixed");
 		});
+
+		function openNav() {
+			document.getElementById("mySidenav").style.width = "250px";
+		}
+
+		/* Установите ширину боковой навигации на 0 */
+		function closeNav() {
+			document.getElementById("mySidenav").style.width = "0";
+		}
 	</script>
 </body>
 
